retries and delay are paremeters; fixed bugs with restoring the state of used-watched tubes

--- a/NetworkSafeConnection.mkd
+++ b/NetworkSafeConnection.mkd
@@ -85,7 +85,7 @@ But we should be still using and watching the same tubes as before:
 You can see that the job we have reserved before is not reserved anymore, but we can delete it anyway.
 
     >>> pprint(job.stats())                         # doctest: +ELLIPSIS
-    {'age': 1,
+    {'age': ...
      ...
      'state': 'ready',
      ...
